src/snapshots/jsonptr__assign__json__tests__test-23.snap
---
source: src/assign.rs
description: asserting that the JSON data is as expected after assignment
info:
  data:
    foo: bar
  ptr: /foo/-
  assign: baz
---
{"foo":["baz"]}
