src/snapshots/jsonptr__assign__json__tests__test-25.snap
---
source: src/assign.rs
description: asserting that the JSON data is as expected after assignment
info:
  data: {}
  ptr: /0
  assign: foo
---
{"0":"foo"}
