src/snapshots/jsonptr__assign__json__tests__test-27.snap
---
source: src/assign.rs
description: asserting that the JSON data is as expected after assignment
info:
  data: ~
  ptr: /1
  assign: foo
---
{"1":"foo"}
